HTML: Fixed some layout issues.

--- a/wmt-application-web/src/main/webapp/css/WMT.css
+++ b/wmt-application-web/src/main/webapp/css/WMT.css
@@ -2,13 +2,13 @@
     author: Theodore Walton
 */
 
-/*#coordinateOverlay {
-    position: absolute;   inset the coordinate overlay's top right relative to the container's top left 
+#coordinateOverlay {
+    position: absolute;  /* inset the coordinate overlay's top right relative to the container's top left */
     top: 50px;
     left: 40%;
-    table-layout: fixed;  fixed column widths specified below 
-    pointer-events: none;  ignore mouse and touch events in the coordinate overlay 
-}*/
+    table-layout: fixed;  /*fixed column widths specified below */
+    pointer-events: none;  /*ignore mouse and touch events in the coordinate overlay */
+}
 
 #coordinateOverlay {
     text-shadow: 0px 0px 2px black; /* text attributes for both coordinate overlay columns */
@@ -33,7 +33,7 @@
     height: 100%;
     padding-left: 0;
     padding-right: 0
-        
+
 }
 #globe { 
     padding-left: 0;
@@ -41,14 +41,14 @@
 }
 
 .container-full {
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-  min-height:100%;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    min-height:100%;
 }
 
 .navbar-nomargin {
-    margin-bottom: 0;   /* override default of 20px
+    margin-bottom: 0;   /* override default of 20px */
 }
 
 .non-interactive { 
@@ -79,16 +79,19 @@
     margin-left: 0;
     height: 100%;
 }
+
 #restSolarData {
     text-shadow: 0px 0px 2px black; /* text attributes for both coordinate overlay columns */
     text-align: center;
     color: white;
 }
 #restSolarData tr td:first-child {
+    padding-right: 5px;
+    text-align: right;
     width: 50px; /* width of coordinate overlay display name column */
 }
 #restSolarData tr td:last-child {
-    width: 75px; /* width of coordinate overlay value column */
+    text-align: left;
 }
 
 
@@ -98,9 +101,12 @@
     color: white;
 }
 #restTerrainData tr td:first-child {
+    padding-right: 5px;
+    text-align: right;
     width: 50px; /* width of coordinate overlay display name column */
 }
 #restTerrainData tr td:last-child {
+    text-align: left;
     width: 75px; /* width of coordinate overlay value column */
 }
 
